syntax = "proto3";

message ResocaMessage {
    message ResocaInfo {
        string version = 1;
        repeated string interfaces = 2;
    }

    message CanFrame {
      uint32 canID = 1;
      bool isCanFD = 2;
      bool isEFFFRAME = 3;
      bool isRTRFRAME = 4;
      bool isERRFRAME = 5;
      bool isCanFDESI = 6;
      bool isCanFDBRS = 7;

      bytes data = 10;
    }

    enum MessageType {
        ACK = 0;
        OK = 1;
        ERR = 2;

        PING = 3;
        PONG = 4;

        CAN_TX = 5;
        CAN_RX = 6;
        CAN_INFO = 7;
        CAN_STAT = 8;

        NOTIFY_START = 9;
        NOTIFY_END = 10;
    }

}
